Rephrase future tense to present tense in l3kernel
I may have gone a bit overboard.  Basically I used present
tense to describe what a function does at time of use, and
future for its longer-term effect.  For instance see the
description of \cs_new_protected:Npn, which now says roughly
"an error is raised if the cs already exists" and "the cs
will not expand in x-type expansion".

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -98,11 +98,11 @@
 %   \end{syntax}
 %   Adds \meta{token} to the list of \meta{tokens} to be inserted
 %   when the current group level ends. The list of \meta{tokens} to be
-%   inserted will be empty at the beginning of a group: multiple
+%   inserted is empty at the beginning of a group: multiple
 %   applications of \cs{group_insert_after:N} may be used to build
 %   the inserted list one \meta{token} at a time. The current group
 %   level may be closed by a \cs{group_end:} function or by a token
-%   with category code $2$ (close-group). The later will be a ^^A{
+%   with category code $2$ (close-group), namely a ^^A{
 %   |}| if standard category codes apply.
 % \end{function}
 %
@@ -115,7 +115,7 @@
 % arguments absorbed by the function. In the following, \meta{code}
 % is therefore used as a shorthand for \enquote{replacement text}.
 %
-% Functions which are not \enquote{protected} will be fully expanded
+% Functions which are not \enquote{protected} are fully expanded
 % inside an \texttt{x} expansion. In contrast, \enquote{protected}
 % functions are not expanded within \texttt{x} expansions.
 %
@@ -124,7 +124,7 @@
 % Functions can be created with no requirement that they are declared
 % first (in contrast to variables, which must always be declared).
 % Declaring a function before setting up the code means that the name
-% chosen will be checked and an error raised if it is already in use.
+% chosen is checked and an error raised if it is already in use.
 % The name of a function can be checked at the point of definition using
 % the \cs[no-index]{cs_new\ldots} functions: this is recommended for all
 % functions which are defined for the first time.
@@ -136,17 +136,17 @@
 % \begin{description}
 %   \item[\texttt{new}]
 %     Create a new function with the \texttt{new} scope,
-%     such as \cs{cs_new:Npn}.  The definition is global and will result in
+%     such as \cs{cs_new:Npn}.  The definition is global and results in
 %     an error if it is already defined.
 %   \item[\texttt{set}]
 %     Create a new function with the \texttt{set} scope,
 %     such as \cs{cs_set:Npn}. The definition is restricted to the current
-%     \TeX{} group and will not result in an error if the function is already
+%     \TeX{} group and does not result in an error if the function is already
 %     defined.
 %   \item[\texttt{gset}]
 %     Create a new function with the \texttt{gset} scope,
 %     such as \cs{cs_gset:Npn}. The definition is global and
-%     will not result in an error if the function is already defined.
+%     does not result in an error if the function is already defined.
 % \end{description}
 %
 % Within each set of scope there are different ways to define a function.
@@ -193,7 +193,7 @@
 %   Creates \meta{function} to expand to \meta{code} as replacement text.
 %   Within the \meta{code}, the \meta{parameters} (|#1|, |#2|,
 %   \emph{etc.}) will be replaced by those absorbed by the function.
-%   The definition is global and an error will result if the
+%   The definition is global and an error results if the
 %   \meta{function} is already defined.
 % \end{function}
 %
@@ -210,7 +210,7 @@
 %   \emph{etc.}) will be replaced by those absorbed by the function.
 %   When the \meta{function} is used the \meta{parameters} absorbed
 %   cannot contain \cs{par} tokens. The definition is global and
-%   an error will result if the \meta{function} is already defined.
+%   an error results if the \meta{function} is already defined.
 % \end{function}
 %
 % \begin{function}
@@ -225,7 +225,7 @@
 %   Within the \meta{code}, the \meta{parameters} (|#1|, |#2|,
 %   \emph{etc.}) will be replaced by those absorbed by the function.
 %   The \meta{function} will not expand within an \texttt{x}-type
-%   argument. The definition is global and an error will result if the
+%   argument. The definition is global and an error results if the
 %   \meta{function} is already defined.
 % \end{function}
 %
@@ -243,7 +243,7 @@
 %   When the \meta{function} is used the \meta{parameters} absorbed
 %   cannot contain \cs{par} tokens. The \meta{function} will not
 %   expand within an \texttt{x}-type argument. The definition is global
-%   and an error will result if the \meta{function} is already defined.
+%   and an error results if the \meta{function} is already defined.
 % \end{function}
 %
 % \begin{function}{\cs_set:Npn, \cs_set:cpn, \cs_set:Npx, \cs_set:cpx}
@@ -388,7 +388,7 @@
 %   automatically from the function signature. These \meta{parameters}
 %   (|#1|, |#2|, \emph{etc.}) will be replaced by those absorbed by the
 %   function. The definition is global and
-%   an error will result if the \meta{function} is already defined.
+%   an error results if the \meta{function} is already defined.
 % \end{function}
 %
 % \begin{function}
@@ -405,7 +405,7 @@
 %   (|#1|, |#2|, \emph{etc.}) will be replaced by those absorbed by the
 %   function.  When the \meta{function} is used the \meta{parameters}
 %   absorbed cannot contain \cs{par} tokens. The definition is global and
-%   an error will result if the \meta{function} is already defined.
+%   an error results if the \meta{function} is already defined.
 % \end{function}
 %
 % \begin{function}
@@ -422,7 +422,7 @@
 %   (|#1|, |#2|, \emph{etc.}) will be replaced by those absorbed by the
 %   function. The \meta{function} will not expand within an \texttt{x}-type
 %   argument. The definition is global and
-%   an error will result if the \meta{function} is already defined.
+%   an error results if the \meta{function} is already defined.
 % \end{function}
 %
 % \begin{function}
@@ -440,7 +440,7 @@
 %   function.  When the \meta{function} is used the \meta{parameters}
 %   absorbed cannot contain \cs{par} tokens. The \meta{function} will not
 %   expand within an \texttt{x}-type argument. The definition is global and
-%   an error will result if the \meta{function} is already defined.
+%   an error results if the \meta{function} is already defined.
 % \end{function}
 %
 % \begin{function}
@@ -670,8 +670,7 @@
 %     \cs{cs_meaning:N} \meta{control sequence}
 %   \end{syntax}
 %   This function expands to the \emph{meaning} of the \meta{control sequence}
-%   control sequence. This will show the \meta{replacement text} for a
-%   macro.
+%   control sequence. For a macro, this includes the \meta{replacement text}.
 %   \begin{texnote}
 %     This is \TeX{}'s \tn{meaning} primitive.
 %     The \texttt{c} variant correctly reports undefined arguments.
@@ -710,8 +709,8 @@
 %   The content for \meta{control sequence name} may be literal
 %   material or from other expandable functions. The
 %   \meta{control sequence name} must, when fully expanded, consist
-%   of character tokens which are not active: typically, they will
-%   be of category code $10$ (space), $11$ (letter)
+%   of character tokens which are not active: typically
+%   of category code $10$ (space), $11$ (letter)
 %   or $12$ (other), or a mixture of these.
 % \end{function}
 %
@@ -752,8 +751,8 @@
 %   The content for \meta{control sequence name} may be literal
 %   material or from other expandable functions. The
 %   \meta{control sequence name} must, when fully expanded, consist
-%   of character tokens which are not active: typically, they will
-%   be of category code $10$ (space), $11$ (letter)
+%   of character tokens which are not active: typically
+%   of category code $10$ (space), $11$ (letter)
 %   or $12$ (other), or a mixture of these.
 %   \begin{texnote}
 %     These are the \TeX{} primitives \tn{csname} and \tn{endcsname}.
@@ -782,22 +781,22 @@
 %   \end{syntax}
 %   Converts the given \meta{control sequence} into a series of
 %   characters with category code $12$ (other), except spaces,
-%   of category code $10$. The sequence will \emph{not} include
-%   the current escape token, \emph{cf.}~\cs{token_to_str:N}.
+%   of category code $10$. The result does \emph{not} include
+%   the current escape token, contrarily to \cs{token_to_str:N}.
 %   Full expansion of this function requires exactly $2$ expansion
 %   steps, and so an \texttt{x}-type expansion, or two
-%   \texttt{o}-type expansions will be required to
+%   \texttt{o}-type expansions are required to
 %   convert the \meta{control sequence} to a sequence of characters
 %   in the input stream. In most cases, an \texttt{f}-expansion
-%   will be correct as well, but this loses a space at the start
+%   is correct as well, but this loses a space at the start
 %   of the result.
 % \end{function}
 %
 % \section{Using or removing tokens and arguments}
 %
 % Tokens in the input can be read and used or read and discarded.
-% If one or more tokens are wrapped in braces then in absorbing them
-% the outer set will be removed. At the same time, the category code
+% If one or more tokens are wrapped in braces then when absorbing them
+% the outer set is removed. At the same time, the category code
 % of each token is set when the token is read by a function (if it
 % is read more than once, the category code is determined by
 % the situation in force when first function absorbs the token).
@@ -809,21 +808,21 @@
 %     \cs{use:nnn}  \Arg{group_1} \Arg{group_2} \Arg{group_3}
 %     \cs{use:nnnn} \Arg{group_1} \Arg{group_2} \Arg{group_3} \Arg{group_4}
 %   \end{syntax}
-%   As illustrated, these functions will absorb between one and four
+%   As illustrated, these functions absorb between one and four
 %   arguments, as indicated by the argument specifier. The braces
-%   surrounding each argument will be removed leaving the remaining
-%   tokens in the input stream. The category code of these tokens will
-%   also be fixed by this process (if it has not already been by some
+%   surrounding each argument are removed and the remaining tokens are
+%   left in the input stream. The category code of these tokens is
+%   also fixed by this process (if it has not already been by some
 %   other absorption). All of these functions require only a single
 %   expansion to operate, so that one expansion of
 %   \begin{verbatim}
 %     \use:nn { abc } { { def } }
 %   \end{verbatim}
-%   will result in the input stream containing
+%   results in the input stream containing
 %   \begin{verbatim}
 %     abc { def }
 %   \end{verbatim}
-%   \emph{i.e.} only the outer braces will be removed.
+%   \emph{i.e.} only the outer braces are removed.
 % \end{function}
 %
 % \begin{function}[EXP]{\use_i:nn, \use_ii:nn}
@@ -836,7 +835,7 @@
 %   the first argument and leaves the content of the second argument in
 %   the input stream.
 %   The category code
-%   of these tokens will also be fixed (if it has not already been by
+%   of these tokens is also fixed (if it has not already been by
 %   some other absorption). A single expansion is needed for the
 %   functions to take effect.
 % \end{function}
@@ -851,7 +850,7 @@
 %   \cs{use_ii:nnn} and \cs{use_iii:nnn} work similarly, leaving the
 %   content of second or third arguments in the input stream, respectively.
 %   The category code
-%   of these tokens will also be fixed (if it has not already been by
+%   of these tokens is also fixed (if it has not already been by
 %   some other absorption). A single expansion is needed for the
 %   functions to take effect.
 % \end{function}
@@ -868,7 +867,7 @@
 %   \cs{use_ii:nnnn}, \cs{use_iii:nnnn} and \cs{use_iv:nnnn} work similarly,
 %   leaving the content of second, third or fourth arguments in the input
 %   stream, respectively. The category code
-%   of these tokens will also be fixed (if it has not already been by
+%   of these tokens is also fixed (if it has not already been by
 %   some other absorption). A single expansion is needed for the
 %   functions to take effect.
 % \end{function}
@@ -877,20 +876,20 @@
 %   \begin{syntax}
 %     \cs{use_i_ii:nnn} \Arg{arg_1} \Arg{arg_2} \Arg{arg_3}
 %   \end{syntax}
-%   This functions will absorb three arguments and leave the content of the
+%   This function absorbs three arguments and leaves the content of the
 %   first and second in the input stream. The category code of
-%   these tokens will also be fixed (if it has not already been by
+%   these tokens is also fixed (if it has not already been by
 %   some other absorption). A single expansion is needed for the
-%   functions to take effect. An example:
+%   function to take effect. An example:
 %   \begin{verbatim}
 %     \use_i_ii:nnn { abc } { { def } } { ghi }
 %   \end{verbatim}
-%   will result in the input stream containing
+%   results in the input stream containing
 %   \begin{verbatim}
 %     abc { def }
 %   \end{verbatim}
-%   \emph{i.e.} the outer braces will be removed and the third group
-%   will be removed.
+%   \emph{i.e.} the outer braces are removed and the third group
+%   is removed.
 % \end{function}
 %
 % \begin{function}[EXP]
@@ -974,17 +973,17 @@
 %     \begin{quote}
 %      |\cs_if_free:cTF {abc}| \Arg{true code} \Arg{false code}
 %     \end{quote}
-%     a function that will turn the first argument into a control sequence
+%     a function that turns the first argument into a control sequence
 %     (since it's marked as |c|) then checks whether this control sequence
-%     is still free and then depending on the result carry out the code in
+%     is still free and then depending on the result carries out the code in
 %     the second argument (true case) or in the third argument (false
 %     case).
 %
 %     These type of functions are known as \enquote{conditionals};
-%     whenever a |TF| function is defined it will usually be accompanied by
+%     whenever a |TF| function is defined it is usually accompanied by
 %     |T| and |F| functions as well. These are provided for convenience when
 %     the branch only needs to go a single way. Package writers are free to
-%     choose which types to define but the kernel definitions will always
+%     choose which types to define but the kernel definitions always
 %     provide all three versions.
 %
 %     Important to note is that these branching conditionals with \meta{true
@@ -993,7 +992,7 @@
 %     the input stream.
 %
 %     These conditional functions may or may not be fully expandable, but if
-%     they are expandable they will be accompanied by a \enquote{predicate}
+%     they are expandable they are accompanied by a \enquote{predicate}
 %     for the same test as described below.
 %
 %   \item[Predicates]
@@ -1016,8 +1015,8 @@
 %       \Arg{true code} \Arg{false code}
 %     \end{quote}
 %
-%     For each predicate defined, a \enquote{branching conditional} will
-%     also exist that behaves like a conditional described above.
+%     For each predicate defined, a \enquote{branching conditional}
+%     also exists that behaves like a conditional described above.
 %
 %   \item[Primitive conditionals]
 %      There is a third variety of conditional, which is the original
@@ -1052,7 +1051,7 @@
 %   \end{syntax}
 %   Tests whether the \meta{control sequence} is currently defined
 %   (whether as a function or another control sequence type). Any
-%   valid definition of \meta{control sequence} will evaluate as
+%   valid definition of \meta{control sequence} evaluates as
 %   \texttt{true}.
 % \end{function}
 %
@@ -1062,7 +1061,7 @@
 %     \cs{cs_if_free:NTF} \meta{control sequence} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Tests whether the \meta{control sequence} is currently free to
-%   be defined. This test will be \texttt{false} if the
+%   be defined. This test is \texttt{false} if the
 %   \meta{control sequence} currently exists (as defined by
 %   \cs{cs_if_exist:N}).
 % \end{function}
@@ -1071,13 +1070,13 @@
 %
 % The \eTeX{} engine itself provides many different conditionals. Some
 % expand whatever comes after them and others don't. Hence the names
-% for these underlying functions will often contain a |:w| part but
+% for these underlying functions often contains a |:w| part but
 % higher level functions are often available. See for instance
 % \cs{int_compare_p:nNn} which is a wrapper for \cs{if_int_compare:w}.
 %
 % Certain conditionals deal with specific data types like boxes and
 % fonts and are described there. The ones described below are either
-% the universal conditionals or deal with control sequences. We will
+% the universal conditionals or deal with control sequences. We
 % prefix primitive conditionals with |\if_|.
 %
 % \begin{function}[EXP]
@@ -1116,7 +1115,7 @@
 %     "\if:w" <token_1> <token_2> <true code> "\else:" <false code> "\fi:" \\
 %     "\if_catcode:w" <token_1> <token_2> <true code> "\else:" <false code> "\fi:"
 %   \end{syntax}
-%   These conditionals will expand any following tokens until two
+%   These conditionals expand any following tokens until two
 %   unexpandable tokens are left. If you wish to prevent this expansion,
 %   prefix the token in question with "\exp_not:N". "\if_catcode:w"
 %   tests if the category codes of the two tokens are the same whereas
@@ -1216,7 +1215,7 @@
 %   \meta{processor} function in three parts: the \meta{name}, the
 %   \meta{signature} and a logic token indicating if a colon was found
 %   (to differentiate variables from function names). The \meta{name}
-%   will not include the escape character, and both the \meta{name} and
+%   does not include the escape character, and both the \meta{name} and
 %   \meta{signature} are made up of tokens with category code $12$
 %   (other). The \meta{processor} should be a function with argument
 %   specification \texttt{:nnN} (plus any trailing arguments needed).
@@ -1291,7 +1290,7 @@
 %
 % Having given all the \TeX{} primitives a consistent name, we need to
 % give sensible names to the ones we actually want to use.
-% These will be defined as needed in the appropriate modules, but
+% These will be defined as needed in the appropriate modules, but we
 % do a few now, just to get started.\footnote{This renaming gets expensive
 % in terms of csname usage, an alternative scheme would be to just use
 % the \cs[no-index]{tex_\ldots:D} name in the cases where no good alternative exists.}
@@ -1633,7 +1632,7 @@
 %   following the |:| in the name. Although we could define functions to
 %   remove ten arguments or more using separate calls of
 %   \cs{use_none:nnnnn}, this is very non-intuitive to the programmer
-%   who will assume that expanding such a function once will take care
+%   who will assume that expanding such a function once takes care
 %   of gobbling all the tokens in one go.
 %    \begin{macrocode}
 \cs_set:Npn \use_none:n         #1                 { }
@@ -1673,9 +1672,9 @@
 % interface.
 %
 % \begin{macro}[EXP]{\prg_return_true:, \prg_return_false:}
-%   The idea here is that \cs{exp:w} will expand fully any
-%   \cs{else:} and the \cs{fi:} that are waiting to be discarded,
-%   before reaching the \cs{exp_end:} which will leave the expansion null.
+%   The idea here is that \cs{exp:w} expands fully any
+%   \cs{else:} and \cs{fi:} that are waiting to be discarded,
+%   before reaching the \cs{exp_end:} which leaves an empty expansion.
 %   The code can then leave either the first or second argument in the
 %   input stream. This means that all of the branching code has to contain
 %   at least two tokens: see how the logical tests are actually implemented
@@ -1688,7 +1687,7 @@
 %    \end{macrocode}
 %   An extended state space could be implemented by including a more
 %   elaborate function in place of \cs{use_i:nn}/\cs{use_ii:nn}. Provided
-%   two arguments are absorbed then the code will work.
+%   two arguments are absorbed then the code would work.
 % \end{macro}
 %
 % \begin{macro}
@@ -1853,7 +1852,7 @@
 %   text (or empty), 6: replacement. Remember that the logic-returning
 %   functions expect two arguments to be present after \cs{exp_end:}:
 %   notice the construction of the different variants relies on this,
-%   and that the |TF| variant will be slightly faster than the |T|
+%   and that the |TF| and |F| variants will be slightly faster than the |T|
 %   version.  The |p| form is only valid for expandable tests, we check
 %   for that by making sure that the second argument is empty.
 %    \begin{macrocode}
@@ -2478,8 +2477,8 @@
 %   stands for csname argument, see the expansion module). Global
 %   versions are also provided.
 %
-%   \cs{cs_set_nopar:cpn}\meta{string}\meta{rep-text} will turn \meta{string}
-%   into a csname and then assign \meta{rep-text} to it by using
+%   \cs{cs_set_nopar:cpn}\meta{string}\meta{rep-text} turns \meta{string}
+%   into a csname and then assigns \meta{rep-text} to it by using
 %   \cs{cs_set_nopar:Npn}.  This means that there might be a parameter
 %   string between the two arguments.
 %    \begin{macrocode}
