--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -66,7 +66,7 @@
 %   \clist_put_right:Nn \l_my_clist { , ~ , , }
 %   \clist_if_empty:NTF \l_my_clist { true } { false }
 % \end{verbatim}
-% will leave \texttt{true} in the input stream. To include an item
+% leaves \texttt{true} in the input stream. To include an item
 % which contains a comma, or starts or ends with a space,
 % surround it with braces.  The sequence data type should be preferred
 % to comma lists if items are to contain |{|, |}|, or |#| (assuming the
@@ -79,8 +79,8 @@
 %     \cs{clist_new:N} \meta{comma list}
 %   \end{syntax}
 %   Creates a new \meta{comma list} or raises an error if the name is
-%   already taken. The declaration is global. The \meta{comma list} will
-%   initially contain no items.
+%   already taken. The declaration is global. The \meta{comma list}
+%   initially contains no items.
 % \end{function}
 %
 % \begin{function}[added = 2014-07-05]
@@ -93,7 +93,7 @@
 %   \end{syntax}
 %   Creates a new constant \meta{clist~var} or raises an error
 %   if the name is already taken. The value of the
-%   \meta{clist~var} will be set globally to the
+%   \meta{clist~var} is set globally to the
 %   \meta{comma list}.
 % \end{function}
 %
@@ -158,7 +158,7 @@
 %   \end{syntax}
 %   Concatenates the content of \meta{comma list_2} and \meta{comma list_3}
 %   together and saves the result in \meta{comma list_1}. The items in
-%   \meta{comma list_2} will be placed at the left side of the new comma list.
+%   \meta{comma list_2} are placed at the left side of the new comma list.
 % \end{function}
 %
 % \begin{function}[EXP, pTF, added=2012-03-03]
@@ -250,7 +250,7 @@
 %     This function iterates through every item in the \meta{comma list} and
 %     does a comparison with the \meta{items} already checked. It is therefore
 %     relatively slow with large comma lists.
-%     Furthermore, it will not work if any of the items in the
+%     Furthermore, it does not work if any of the items in the
 %     \meta{comma list} contains |{|, |}|, or |#|
 %     (assuming the usual \TeX{} category codes apply).
 %   \end{texnote}
@@ -292,7 +292,7 @@
 %   reverse order. Braces and spaces are preserved by this process.
 %   \begin{texnote}
 %     The result is returned within \tn{unexpanded}, which means that the
-%     comma list will not expand further when appearing in an
+%     comma list does not expand further when appearing in an
 %     \texttt{x}-type argument expansion.
 %   \end{texnote}
 % \end{function}
@@ -380,7 +380,7 @@
 %     \cs{clist_map_function:NN} \meta{comma list} \meta{function}
 %   \end{syntax}
 %   Applies \meta{function} to every \meta{item} stored in the
-%   \meta{comma list}. The \meta{function} will receive one argument for
+%   \meta{comma list}. The \meta{function} receives one argument for
 %   each iteration. The \meta{items} are returned from left to right.
 %   The function \cs{clist_map_inline:Nn} is in general more efficient
 %   than \cs{clist_map_function:NN}.
@@ -394,7 +394,7 @@
 %   \end{syntax}
 %   Applies \meta{inline function} to every \meta{item} stored
 %   within the \meta{comma list}. The \meta{inline function} should
-%   consist of code which will receive the \meta{item} as |#1|.
+%   consist of code which receives the \meta{item} as |#1|.
 %   One in line mapping can be nested inside another. The \meta{items}
 %   are returned from left to right.
 % \end{function}
@@ -406,7 +406,7 @@
 %   \end{syntax}
 %   Stores each entry in the \meta{comma list} in turn in the
 %   \meta{tl~var.}\ and applies the \meta{function using tl~var.}
-%   The \meta{function} will usually consist of code making use of
+%   The \meta{function} usually consists of code making use of
 %   the \meta{tl~var.}, but this is not enforced.  One variable
 %   mapping can be nested inside another. The \meta{items}
 %   are returned from left to right.
@@ -417,8 +417,8 @@
 %     \cs{clist_map_break:}
 %   \end{syntax}
 %   Used to terminate a |\clist_map_...| function before all
-%   entries in the \meta{comma list} have been processed. This will
-%   normally take place within a conditional statement, for example
+%   entries in the \meta{comma list} have been processed. This
+%   normally takes place within a conditional statement, for example
 %   \begin{verbatim}
 %     \clist_map_inline:Nn \l_my_clist
 %       {
@@ -429,12 +429,12 @@
 %           }
 %       }
 %   \end{verbatim}
-%   Use outside of a |\clist_map_...| scenario will lead to low
+%   Use outside of a |\clist_map_...| scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
 %     When the mapping is broken, additional tokens may be inserted by the
 %     internal macro \cs{__prg_break_point:Nn} before further items are taken
-%     from the input stream. This will depend on the design of the mapping
+%     from the input stream. This depends on the design of the mapping
 %     function.
 %   \end{texnote}
 % \end{function}
@@ -445,8 +445,8 @@
 %   \end{syntax}
 %   Used to terminate a |\clist_map_...| function before all
 %   entries in the \meta{comma list} have been processed, inserting
-%   the \meta{tokens} after the mapping has ended. This will
-%   normally take place within a conditional statement, for example
+%   the \meta{tokens} after the mapping has ended. This
+%   normally takes place within a conditional statement, for example
 %   \begin{verbatim}
 %     \clist_map_inline:Nn \l_my_clist
 %       {
@@ -457,13 +457,13 @@
 %           }
 %       }
 %   \end{verbatim}
-%   Use outside of a |\clist_map_...| scenario will lead to low
+%   Use outside of a |\clist_map_...| scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
 %     When the mapping is broken, additional tokens may be inserted by the
 %     internal macro \cs{__prg_break_point:Nn} before the \meta{tokens} are
 %     inserted into the input stream.
-%     This will depend on the design of the mapping function.
+%     This depends on the design of the mapping function.
 %   \end{texnote}
 % \end{function}
 %
@@ -474,7 +474,7 @@
 %   \end{syntax}
 %   Leaves the number of items in the \meta{comma list} in the input
 %   stream as an \meta{integer denotation}. The total number of items
-%   in a \meta{comma list} will include those which are duplicates,
+%   in a \meta{comma list} includes those which are duplicates,
 %   \emph{i.e.}~every item in a \meta{comma list} is unique.
 % \end{function}
 %
@@ -492,7 +492,7 @@
 %   the comma list has exactly two items, then they are placed in the input
 %   stream separated by the \meta{separator between two}.  If the comma
 %   list has a single item, it is placed in the input stream, and a comma
-%   list with no items produces no output.  An error will be raised if
+%   list with no items produces no output.  An error is raised if
 %   the variable does not exist or if it is invalid.
 %
 %   For example,
@@ -500,13 +500,13 @@
 %     \clist_set:Nn \l_tmpa_clist { a , b , , c , {de} , f }
 %     \clist_use:Nnnn \l_tmpa_clist { ~and~ } { ,~ } { ,~and~ }
 %   \end{verbatim}
-%   will insert \enquote{\texttt{a, b, c, de, and f}} in the input
+%   inserts \enquote{\texttt{a, b, c, de, and f}} in the input
 %   stream.  The first separator argument is not used in this case
 %   because the comma list has more than $2$ items.
 %   \begin{texnote}
 %     The result is returned within the \tn{unexpanded}
 %     primitive (\cs{exp_not:n}), which means that the \meta{items}
-%     will not expand further when appearing in an \texttt{x}-type
+%     do not expand further when appearing in an \texttt{x}-type
 %     argument expansion.
 %   \end{texnote}
 % \end{function}
@@ -518,7 +518,7 @@
 %   Places the contents of the \meta{clist~var} in the input stream,
 %   with the \meta{separator} between the items. If the comma
 %   list has a single item, it is placed in the input stream, and a comma
-%   list with no items produces no output.  An error will be raised if
+%   list with no items produces no output.  An error is raised if
 %   the variable does not exist or if it is invalid.
 %
 %   For example,
@@ -526,12 +526,12 @@
 %     \clist_set:Nn \l_tmpa_clist { a , b , , c , {de} , f }
 %     \clist_use:Nn \l_tmpa_clist { ~and~ }
 %   \end{verbatim}
-%   will insert \enquote{\texttt{a and b and c and de and f}} in the input
+%   inserts \enquote{\texttt{a and b and c and de and f}} in the input
 %   stream.
 %   \begin{texnote}
 %     The result is returned within the \tn{unexpanded}
 %     primitive (\cs{exp_not:n}), which means that the \meta{items}
-%     will not expand further when appearing in an \texttt{x}-type
+%     do not expand further when appearing in an \texttt{x}-type
 %     argument expansion.
 %   \end{texnote}
 % \end{function}
@@ -552,8 +552,8 @@
 %   Stores the left-most item from a \meta{comma list} in the
 %   \meta{token list variable} without removing it from the
 %   \meta{comma list}. The \meta{token list variable} is assigned locally.
-%   If the \meta{comma list} is empty the \meta{token list variable} will
-%   contain the marker value \cs{q_no_value}.
+%   If the \meta{comma list} is empty the \meta{token list variable}
+%   is set to the marker value \cs{q_no_value}.
 % \end{function}
 %
 % \begin{function}[TF, added = 2012-05-14]{\clist_get:NN, \clist_get:cN}
@@ -638,17 +638,17 @@
 %     \cs{clist_item:Nn} \meta{comma list} \Arg{integer expression}
 %   \end{syntax}
 %   Indexing items in the \meta{comma list} from~$1$ at the top (left), this
-%   function will evaluate the \meta{integer expression} and leave the
+%   function evaluates the \meta{integer expression} and leaves the
 %   appropriate item from the comma list in the input stream. If the
 %   \meta{integer expression} is negative, indexing occurs from the
 %   bottom (right) of the comma list. When the \meta{integer expression}
 %   is larger than the number of items in the \meta{comma list} (as
-%   calculated by \cs{clist_count:N}) then the function will expand to
+%   calculated by \cs{clist_count:N}) then the function expands to
 %   nothing.
 %   \begin{texnote}
 %     The result is returned within the \tn{unexpanded}
 %     primitive (\cs{exp_not:n}), which means that the \meta{item}
-%     will not expand further when appearing in an \texttt{x}-type
+%     does not expand further when appearing in an \texttt{x}-type
 %     argument expansion.
 %   \end{texnote}
 % \end{function}
@@ -1404,7 +1404,7 @@
 %   by blank spaces (besides, this particular variant of
 %   the emptiness test is optimized). If the item of the
 %   comma list is blank, grab the next one. As soon as one
-%   item is non-blank, exit: the second auxiliary will grab
+%   item is non-blank, exit: the second auxiliary grabs
 %   \cs{prg_return_false:} as |#2|, unless every item in
 %   the comma list was blank and the loop actually got broken
 %   by the trailing |\q_mark \prg_return_false:| item.
