--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -74,7 +74,7 @@
 %    \end{macrocode}
 %
 % \begin{macro}[aux]{\@@_error:Nnn}
-%   The \tn{outer} definition here ensures the command will not appear
+%   The \tn{outer} definition here ensures the command cannot appear
 %   in an argument.  Use this auxiliary on all commands that have been
 %   removed since 2015.
 %    \begin{macrocode}
