--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -96,7 +96,7 @@ and all files in that bundle must be distributed together.
 %   Use at own risk!}
 %
 % It is written as a \enquote{self-contained} docstrip file: executing
-% |latex l3doc.dtx| will generate the \file{l3doc.cls} file and typeset
+% |latex l3doc.dtx| generates the \file{l3doc.cls} file and typesets
 % this documentation; execute |tex l3doc.dtx| to only generate
 % \file{l3doc.cls}.
 %
@@ -233,7 +233,7 @@ and all files in that bundle must be distributed together.
 % Use |\begin{documentation}...\end{documentation}| around the
 % documentation, and |\begin{implementation}...\end{implementation}|
 % around the implementation.  The
-% \cs{EnableDocumentation}/\cs{EnableImplementation} will cause them to
+% \cs{EnableDocumentation}/\cs{EnableImplementation} causes them to
 % be typeset when the \file{.dtx} file is \cs{DocInput}; use
 % \cs{DisableDocumentation}/\cs{DisableImplementation} to omit the
 % contents of those environments.
@@ -259,7 +259,7 @@ and all files in that bundle must be distributed together.
 %   recommended.
 %
 %   These commands are aware of the |@@| \pkg{l3docstrip} syntax and
-%   will replace such instances correctly in the typeset documentation.
+%   replace such instances correctly in the typeset documentation.
 %   This only happens after a |%<@@=|\meta{module}|>| declaration.
 %
 %   Additionally, commands can be used in the argument of \cs{cs}.  For
@@ -269,10 +269,10 @@ and all files in that bundle must be distributed together.
 %   The \meta{options} are a key--value list which can contain the
 %   following keys:
 %   \begin{itemize}
-%     \item |index=|\meta{name}: the \meta{csname} will be indexed as if
+%     \item |index=|\meta{name}: the \meta{csname} is indexed as if
 %       one had written \cs{cs}\Arg{name}.
-%     \item |no-index|: the \meta{csname} will not be indexed.
-%     \item |module=|\meta{module}: the \meta{csname} will be indexed in
+%     \item |no-index|: the \meta{csname} is not indexed.
+%     \item |module=|\meta{module}: the \meta{csname} is indexed in
 %       the list of commands from the \meta{module}; the \meta{module}
 %       can in particular be |TeX| for \enquote{\TeX{} and \LaTeXe{}}
 %       commands, or empty for commands which should be placed in the
@@ -289,7 +289,7 @@ and all files in that bundle must be distributed together.
 %     \cs{tn} \oarg{options} \marg{csname}
 %   \end{syntax}
 %   Analoguous to \cs{cs} but intended for \enquote{traditional} \TeX{}
-%   or \LaTeXe{} commands; they will be indexed accordingly.  This is in
+%   or \LaTeXe{} commands; they are indexed accordingly.  This is in
 %   fact equivalent to \cs{cs} |[module=TeX, replace=false,|
 %   \meta{options}|]| \Arg{csname}.
 % \end{function}
@@ -415,22 +415,25 @@ and all files in that bundle must be distributed together.
 % necessary to highlight it as much and you also don't need to check it
 % for, say, having a test function and having a documentation chunk
 % earlier in a \env{function} environment.  In this case, write
-% |\begin{macro}[aux]| and it will be marked as such; its margin
-% call-out will be printed in grey.
+% |\begin{macro}[aux]| to mark it as such; its margin
+% call-out is then printed in grey.
 %
 % Similarly, an internal package function still requires documentation
-% but usually will not be documented for users to see; these can be
+% but usually is not documented for users to see; these can be
 % marked as such with |\begin{macro}[int]|.
 %
 % For documenting \pkg{expl3}-type conditionals, you may also pass this
 % environment a |TF| option (and omit it from the function name) to
 % denote that the function is provided with |T|, |F|, and |TF| suffixes.
-% A similar |pTF| option will print both |TF| and |_p| predicate forms.
+% A similar |pTF| option prints both |TF| and |_p| predicate forms.
+% An option |noTF| prints both the |TF| forms and a form with neither
+% |T| nor |F|, to document functions such as \cs[no-index]{prop_get:NN}
+% which also have conditional forms (\cs[no-index]{prop_get:NNTF}).
 %
 %
 % \DescribeMacro{\TestFiles}
 % \cs{TestFiles}\marg{list of files} is used to indicate which test
-% files are used for the current code; they will be printed in the
+% files are used for the current code; they are printed in the
 % documentation.
 %
 % \DescribeMacro{\UnitTested}
@@ -449,14 +452,14 @@ and all files in that bundle must be distributed together.
 % \DescribeMacro{\TestMissing}
 % If a function is missing a test, this may be flagged by writing (as
 % many times as needed) \cs{TestMissing} \marg{explanation of test
-%   required}.  These missing tests will be summarised in the listing
+%   required}.  These missing tests are summarised in the listing
 % printed at the end of the compilation run.
 %
 % \DescribeEnv{variable}
 % When documenting variable definitions, use the \env{variable}
-% environment instead.  It will, here, behave identically to the
+% environment instead.  Here it behaves identically to the
 % \env{macro} environment, except that if the class option |checktest|
-% is enabled, variables will not be required to have a test file.
+% is enabled, variables are not required to have a test file.
 %
 % \DescribeEnv{arguments}
 % Within a \env{macro} environment, you may use the \env{arguments}
@@ -749,9 +752,9 @@ and all files in that bundle must be distributed together.
 %   }
 %   When analyzing a control sequence found within a \env{macrocode}
 %   environment, \cs{l_@@_index_macro_tl} holds the control sequence
-%   (partially a string), \cs{l_@@_index_key_tl} holds what will be used
-%   as a sort key in the index, and \cs{l_@@_index_module_tl} is the
-%   subindex in which the control sequence will be listed.  Finally,
+%   (partially a string), \cs{l_@@_index_key_tl} holds the future
+%   sort key in the index, and \cs{l_@@_index_module_tl} is the
+%   subindex in which the control sequence should be listed.  Finally,
 %   \cs{l_@@_index_internal_bool} indicates when the control sequence is
 %   internal and should be indexed in a slightly different subindex.
 %    \begin{macrocode}
@@ -939,7 +942,7 @@ and all files in that bundle must be distributed together.
 %
 % \begin{macro}[int,TF]{\@@_if_almost_str:n}
 %   Used to test if the argument of |\cmd| or other macros to be indexed
-%   is almost a string or not: for instance this will be wrong if |#1|
+%   is almost a string or not: for instance this is \texttt{false} if |#1|
 %   contains |\meta{...}|.  The surprising |f|-expansion are there to
 %   cope with the case of |#1| starting with \cs{c_@@_backslash_tl}
 %   which should be expanded and considered to be \enquote{normal}.
@@ -3125,7 +3128,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% Here are some definitions for additional markup that will help to
+% Here are some definitions for additional markup that helps to
 % structure your documentation.
 %
 % \begin{environment}{danger}
