--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -63,7 +63,7 @@
 %
 % \subsection{Input encoding}
 %
-% The letters |a|--|z| and |A|--|Z| will be correct directly from Ini\TeX{}
+% The letters |a|--|z| and |A|--|Z| have the correct catcode directly from Ini\TeX{}
 % while for Unicode engines (almost) all characters to be treated as letters
 % are defined by the automatic data parsing. Thus the changes here are to 
 % deal with the additional cases.
