--- a/l3kernel/l3flag.dtx
+++ b/l3kernel/l3flag.dtx
@@ -84,7 +84,7 @@
 %   Creates a new flag with a name given by \meta{flag name}, or raises
 %   an error if the name is already taken. The \meta{flag name} may not
 %   contain spaces. The declaration is global, but flags are always
-%   local variables. The \meta{flag} will initially have zero height.
+%   local variables. The \meta{flag} initially has zero height.
 % \end{function}
 %
 % \begin{function}{\flag_clear:n}
