--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -72,8 +72,8 @@
 % \end{quote}
 % Let us explain each piece separately.
 %
-% Internal floating point numbers will be used in expressions,
-% and in this context will be subject to \texttt{f}-expansion. They must
+% Internal floating point numbers are used in expressions,
+% and in this context are subject to \texttt{f}-expansion. They must
 % leave a recognizable mark after \texttt{f}-expansion, to prevent the
 % floating point number from being re-parsed. Thus, \cs{s_@@}
 % is simply another name for \tn{relax}.
@@ -483,7 +483,7 @@
 % \subsection{Packing digits}
 %
 % When a positive integer |#1| is known to be less than $10^8$, the
-% following trick will split it into two blocks of $4$ digits, padding
+% following trick splits it into two blocks of $4$ digits, padding
 % with zeros on the left.
 % \begin{verbatim}
 %   \cs_new:Npn \pack:NNNNNw #1 #2#3#4#5 #6; { {#2#3#4#5} {#6} }
@@ -520,14 +520,14 @@
 % which triggers the third computation.  The third computation's value
 % is $5\,0000\,0000 + 12345 \times 8899$, which has $9$ digits. Adding
 % $5\cdot 10^{8}$ to the product allowed us to know how many digits to
-% expect as long as the numbers to multiply are not too big; it will
-% also work to some extent with negative results.  The \texttt{pack}
+% expect as long as the numbers to multiply are not too big; it
+% also works to some extent with negative results.  The \texttt{pack}
 % function puts the last $4$ of those $9$ digits into a brace group,
 % moves the semi-colon delimiter, and inserts a |+|, which combines the
 % carry with the previous computation.  The shifts nicely combine into
 % $5\,0000\,0000 / 10^{4} + 4\,9995\,0000 = 5\,0000\,0000$.  As long as
 % the operands are in some range, the result of this second computation
-% will have $9$ digits.  The corresponding \texttt{pack} function,
+% has $9$ digits.  The corresponding \texttt{pack} function,
 % expanded after the result is computed, braces the last $4$ digits, and
 % leaves |+| \meta{5 digits} for the initial computation.  The
 % \enquote{leading shift} cancels the combination of the other shifts,
@@ -610,7 +610,7 @@
 %   \end{syntax}
 %   Grabs two sets of $4$ digits and places them before the semi-colon
 %   delimiter.  Putting several copies of this function before a
-%   semicolon will pack more digits since each will take the digits
+%   semicolon packs more digits since each takes the digits
 %   packed by the others in its first argument.
 %    \begin{macrocode}
 \cs_new:Npn \@@_pack_twice_four:wNNNNNNNN #1; #2#3#4#5 #6#7#8#9
@@ -624,8 +624,8 @@
 %   \end{syntax}
 %   Grabs one set of $8$ digits and places them before the semi-colon
 %   delimiter as a single group.  Putting several copies of this
-%   function before a semicolon will pack more digits since each will
-%   take the digits packed by the others in its first argument.
+%   function before a semicolon packs more digits since each
+%   takes the digits packed by the others in its first argument.
 %    \begin{macrocode}
 \cs_new:Npn \@@_pack_eight:wNNNNNNNN #1; #2#3#4#5 #6#7#8#9
   { #1 {#2#3#4#5#6#7#8#9} ; }
@@ -851,14 +851,14 @@
 %   \meta{junk}
 %   \meta{floating point}
 % \end{syntax}
-% In this example, the case $0$ will return the floating point
+% In this example, the case $0$ returns the floating point
 % \meta{fp~var}, expanding once after that floating point.  Case $1$
-% will do \meta{some computation} using the \meta{floating point}
+% does \meta{some computation} using the \meta{floating point}
 % (presumably compute the operation requested by the user in that
-% non-trivial case).  Case $2$ will return the \meta{floating point}
+% non-trivial case).  Case $2$ returns the \meta{floating point}
 % without modifying it, removing the \meta{junk} and expanding once
-% after.  Case $3$ will close the conditional, remove the \meta{junk}
-% and the \meta{floating point}, and expand \meta{something} next.  In
+% after.  Case $3$ closes the conditional, removes the \meta{junk}
+% and the \meta{floating point}, and expands \meta{something} next.  In
 % other cases, the \enquote{\meta{junk}} is expanded, performing some
 % other operation on the \meta{floating point}.  We provide similar
 % functions with two trailing \meta{floating points}.
