--- a/l3kernel/l3fp-convert.dtx
+++ b/l3kernel/l3fp-convert.dtx
@@ -69,7 +69,7 @@
 %   If |#1| ends with a $0$, the \texttt{loop} auxiliary takes that zero
 %   as an end-delimiter for its first argument, and the second argument
 %   is the same \texttt{loop} auxiliary.  Once the last trailing zero is
-%   reached, the second argument will be the \texttt{dot} auxiliary,
+%   reached, the second argument is the \texttt{dot} auxiliary,
 %   which removes a trailing dot if any.  We then clean-up with the
 %   \texttt{end} auxiliary, keeping only the number.
 %    \begin{macrocode}
@@ -355,7 +355,7 @@
 % \begin{macro}[aux, EXP]{\@@_to_int_dispatch:w}
 %   To convert to an integer, first round to $0$ places (to the nearest
 %   integer), then express the result as a decimal number: the
-%   definition of \cs{@@_to_decimal_dispatch:w} is such that there will be no
+%   definition of \cs{@@_to_decimal_dispatch:w} is such that there are no
 %   trailing dot nor zero.
 %    \begin{macrocode}
 \cs_new:Npn \@@_to_int_dispatch:w #1;
