--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -158,8 +158,8 @@
 %     \cs{int_new:N} \meta{integer}
 %   \end{syntax}
 %   Creates a new \meta{integer} or raises an error if the name is
-%   already taken. The declaration is global. The \meta{integer} will
-%   initially be equal to $0$.
+%   already taken. The declaration is global. The \meta{integer} is
+%   initially equal to $0$.
 % \end{function}
 %
 % \begin{function}[updated = 2011-10-22]{\int_const:Nn, \int_const:cn}
@@ -167,7 +167,7 @@
 %     \cs{int_const:Nn} \meta{integer} \Arg{integer expression}
 %   \end{syntax}
 %   Creates a new constant \meta{integer} or raises an error if the name
-%   is already taken. The value of the \meta{integer} will be set
+%   is already taken. The value of the \meta{integer} is set
 %   globally to the \meta{integer expression}.
 % \end{function}
 %
@@ -262,7 +262,7 @@
 %     \cs{int_use:N} \meta{integer}
 %   \end{syntax}
 %   Recovers the content of an \meta{integer} and places it directly
-%   in the input stream. An error will be raised if the variable does
+%   in the input stream. An error is raised if the variable does
 %   not exist or if it is invalid. Can be omitted in places where an
 %   \meta{integer} is required (such as in the first and third arguments
 %   of \cs{int_compare:nNnTF}).
@@ -367,7 +367,7 @@
 %       }
 %       { No idea! }
 %    \end{verbatim}
-%    will leave \enquote{\texttt{Medium}} in the input stream.
+%    leaves \enquote{\texttt{Medium}} in the input stream.
 % \end{function}
 %
 % \begin{function}[EXP,pTF]{\int_if_even:n, \int_if_odd:n}
@@ -390,8 +390,8 @@
 %   Places the \meta{code} in the input stream for \TeX{} to process, and
 %   then evaluates the relationship between the two
 %   \meta{integer expressions} as described for \cs{int_compare:nNnTF}.
-%   If the test is \texttt{false} then the \meta{code} will be inserted
-%   into the input stream again and a loop will occur until the
+%   If the test is \texttt{false} then the \meta{code} is inserted
+%   into the input stream again and a loop occurs until the
 %   \meta{relation} is \texttt{true}.
 % \end{function}
 %
@@ -402,8 +402,8 @@
 %   Places the \meta{code} in the input stream for \TeX{} to process, and
 %   then evaluates the relationship between the two
 %   \meta{integer expressions} as described for \cs{int_compare:nNnTF}.
-%   If the test is \texttt{true} then the \meta{code} will be inserted
-%   into the input stream again and a loop will occur until the
+%   If the test is \texttt{true} then the \meta{code} is inserted
+%   into the input stream again and a loop occurs until the
 %   \meta{relation} is \texttt{false}.
 % \end{function}
 %
@@ -415,7 +415,7 @@
 %   as described for \cs{int_compare:nNnTF}, and then places the
 %   \meta{code} in the input stream if the \meta{relation} is
 %   \texttt{false}. After the \meta{code} has been processed by \TeX{} the
-%   test will be repeated, and a loop will occur until the test is
+%   test is repeated, and a loop occurs until the test is
 %   \texttt{true}.
 % \end{function}
 %
@@ -427,7 +427,7 @@
 %   as described for \cs{int_compare:nNnTF}, and then places the
 %   \meta{code} in the input stream if the \meta{relation} is
 %   \texttt{true}. After the \meta{code} has been processed by \TeX{} the
-%   test will be repeated, and a loop will occur until the test is
+%   test is repeated, and a loop occurs until the test is
 %   \texttt{false}.
 % \end{function}
 %
@@ -438,8 +438,8 @@
 %   Places the \meta{code} in the input stream for \TeX{} to process, and
 %   then evaluates the \meta{integer relation}
 %   as described for \cs{int_compare:nTF}.
-%   If the test is \texttt{false} then the \meta{code} will be inserted
-%   into the input stream again and a loop will occur until the
+%   If the test is \texttt{false} then the \meta{code} is inserted
+%   into the input stream again and a loop occurs until the
 %   \meta{relation} is \texttt{true}.
 % \end{function}
 %
@@ -450,8 +450,8 @@
 %   Places the \meta{code} in the input stream for \TeX{} to process, and
 %   then evaluates the \meta{integer relation}
 %   as described for \cs{int_compare:nTF}.
-%   If the test is \texttt{true} then the \meta{code} will be inserted
-%   into the input stream again and a loop will occur until the
+%   If the test is \texttt{true} then the \meta{code} is inserted
+%   into the input stream again and a loop occurs until the
 %   \meta{relation} is \texttt{false}.
 % \end{function}
 %
@@ -463,7 +463,7 @@
 %   as described for \cs{int_compare:nTF}, and then places the
 %   \meta{code} in the input stream if the \meta{relation} is
 %   \texttt{false}. After the \meta{code} has been processed by \TeX{} the
-%   test will be repeated, and a loop will occur until the test is
+%   test is repeated, and a loop occurs until the test is
 %   \texttt{true}.
 % \end{function}
 %
@@ -475,7 +475,7 @@
 %   as described for \cs{int_compare:nTF}, and then places the
 %   \meta{code} in the input stream if the \meta{relation} is
 %   \texttt{true}. After the \meta{code} has been processed by \TeX{} the
-%   test will be repeated, and a loop will occur until the test is
+%   test is repeated, and a loop occurs until the test is
 %   \texttt{false}.
 % \end{function}
 %
@@ -587,8 +587,8 @@
 %     ~~\meta{value to symbol mapping}
 %   \end{syntax}
 %   This is the low-level function for conversion of an
-%   \meta{integer expression} into a symbolic form (which will often
-%   be letters). The \meta{total symbols} available should be given
+%   \meta{integer expression} into a symbolic form (often
+%   letters). The \meta{total symbols} available should be given
 %   as an integer expression. Values are actually converted to symbols
 %   according to the \meta{value to symbol mapping}. This should be given
 %   as \meta{total symbols} pairs of entries, a number and the
@@ -736,7 +736,7 @@
 %     numeral} is first converted to a string, with no expansion.  The
 %   \meta{roman numeral} may be in upper or lower case; if the numeral
 %   contains characters besides |mdclxvi| or |MDCLXVI| then the
-%   resulting value will be $-1$.  This is the inverse function of
+%   resulting value is $-1$.  This is the inverse function of
 %   \cs{int_to_roman:n} and \cs{int_to_Roman:n}.
 % \end{function}
 %
@@ -1318,7 +1318,7 @@
 % \UnitTested
 % \begin{macro}{\int_gset:Nn, \int_gset:cn}
 % \UnitTested
-%   As integers are register-based \TeX{} will issue an error
+%   As integers are register-based \TeX{} issues an error
 %   if they are not defined. Thus there is no need for the checking
 %   code seen with token list variables.
 %    \begin{macrocode}
@@ -1419,11 +1419,11 @@
 %   is at least one relation symbol.  We first let \TeX{} evaluate this
 %   left hand side of the (in)equality using \cs{@@_eval:w}.  Since the
 %   relation symbols |<|, |>|, |=| and |!| are not allowed in integer
-%   expressions, they will terminate it.  If the argument contains no
+%   expressions, they would terminate the expression.  If the argument contains no
 %   relation symbol, \cs{__prg_compare_error:} is expanded,
 %   inserting~|=| and itself after an error.  In all cases,
 %   \cs{@@_compare:w} receives as its argument an integer, a relation
-%   symbol, and some more tokens.  We then setup the loop, which will be
+%   symbol, and some more tokens.  We then setup the loop, which is
 %   ended by the two odd-looking items |e| and |{=nd_}|, with a trailing
 %   \cs{q_stop} used to grab the entire argument when necessary.
 %    \begin{macrocode}
@@ -1751,7 +1751,7 @@
 %   We put a \cs{__prg_break_point:Nn} so that \texttt{map_break}
 %   functions from other modules correctly decrement \cs{g__prg_map_int}
 %   before looking for their own break point.  The first argument is
-%   \cs{scan_stop:}, so no breaking function will recognize this break
+%   \cs{scan_stop:}, so that no breaking function recognizes this break
 %   point as its own.
 %    \begin{macrocode}
 \cs_new_protected:Npn \int_step_inline:nnnn
@@ -2094,7 +2094,7 @@
 % code $12$ (other). Usually, what is actually wanted is letters.
 % The approach here is to convert the output of the primitive into
 % letters using appropriate control sequence names. That keeps
-% everything expandable. The loop will be terminated by the conversion
+% everything expandable. The loop is terminated by the conversion
 % of the |Q|.
 %    \begin{macrocode}
 \cs_new:Npn \int_to_roman:n #1
