--- a/l3kernel/l3styleguide.tex
+++ b/l3kernel/l3styleguide.tex
@@ -131,8 +131,8 @@ spaces. Within the \texttt{false} branch, the need for multiple lines
 means that an additional two-space indent should be used to show that
 these lines are all part of the brace group.
 
-The result of these lay-out conventions is code which will in general
-look like the example:
+The result of these lay-out conventions is code which in general
+looks like the example:
 \begin{verbatim*}
 \cs_new:Npn \module_foo:nn #1#2
   {
@@ -238,7 +238,7 @@ code as the team develop additional interfaces.
 \section{Auxiliary functions}
 
 In general, the team encourages the use of descriptive names in \LaTeX3 code.
-Thus many helper functions will have names which describe briefly what they do,
+Thus many helper functions would have names which describe briefly what they do,
 rather than simply indicating that they are auxiliary to some higher-level
 function. However, there are places where one or more \texttt{aux} functions
 are required. Where possible, these should be differentiated by signature
