--- a/l3kernel/l3tl-analysis.dtx
+++ b/l3kernel/l3tl-analysis.dtx
@@ -344,14 +344,14 @@
 % \end{itemize}
 % The only tokens which are not valid \texttt{N}-type arguments are true
 % begin-group characters, true end-group characters, and true spaces.
-% We will detect those characters by scanning ahead with \tn{futurelet},
+% We detect those characters by scanning ahead with \tn{futurelet},
 % then distinguishing true characters from control sequences set equal
 % to them using the \tn{string} representation.
 %
 % The second pass is a simple exercise in expandable loops.
 %
 % \begin{macro}[int]{\@@:n}
-%   Everything is done within a group, and all definitions will be
+%   Everything is done within a group, and all definitions are
 %   local. We use \cs{group_align_safe_begin/end:} to avoid problems in
 %   case \cs{@@:n} is used within an alignment and its argument
 %   contains alignment tab tokens.
@@ -442,7 +442,7 @@
 % \end{itemize}
 % Our first tool is \tn{futurelet}. This cannot distinguish
 % case $8$ from $1$ or $2$, nor case $9$ from $3$ or $4$,
-% nor case $10$ from case $5$. Those cases will be distinguished
+% nor case $10$ from case $5$. Those cases are later distinguished
 % by applying the \tn{string} primitive to the following token,
 % after possibly changing the escape character to ensure that
 % a control sequence's string representation cannot be mistaken
@@ -631,7 +631,7 @@
 %   \item 1 begin-group character.
 %   \end{itemize}
 %   We need to distinguish further the case of a space character
-%   (code $32$) from other character codes, because those will
+%   (code $32$) from other character codes, because those
 %   behave differently in the second pass. Namely, after testing
 %   the \tn{lccode} of $0$ (which holds the present character code)
 %   we change the cases above to
@@ -722,8 +722,8 @@
 % \begin{macro}[int]{\@@_b:n}
 % \begin{macro}[int, EXP]{\@@_b_loop:w}
 %   Start the loop with the index $0$. No need for an end-marker:
-%   the loop will stop by itself when the last index is read.
-%   We will repeatedly oscillate between reading long stretches
+%   the loop stops by itself when the last index is read.
+%   We repeatedly oscillate between reading long stretches
 %   of normal tokens, and reading special tokens.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_b:n #1
