--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -53,17 +53,17 @@
 % others are used to work with files on a line by line basis and have prefix
 % \cs[no-index]{ior_\ldots} (reading) or \cs[no-index]{iow_\ldots} (writing).
 %
-% It is important to remember that when reading external files \TeX{} will
-% attempt to locate them both the operating system path and entries in the
+% It is important to remember that when reading external files \TeX{}
+% attempts to locate them both the operating system path and entries in the
 % \TeX{} file database (most \TeX{} systems use such a database). Thus the
 % \enquote{current path} for \TeX{} is somewhat broader than that for other
 % programs.
 %
 % For functions which expect a \meta{file name} argument, this argument
 % may contain both literal items and expandable content, which should on
-% full expansion be the desired file name.  Any active characters (as
-% declared in \cs{l_char_active_seq}) will \emph{not} be expanded,
-% allowing the direct use of these in file names. File names will be quoted
+% full expansion be the desired file name.  Active characters (as
+% declared in \cs{l_char_active_seq}) are \emph{not} be expanded,
+% allowing the direct use of these in file names. File names are quoted
 % using |"| tokens if they contain spaces: as a result, |"| tokens are
 % \emph{not} permitted in file names.
 %
@@ -76,14 +76,14 @@
 %     \g_file_curr_ext_str
 %   }
 %   Contain the directory, name and extension of the current file. The
-%   directory will be empty if the file was loaded without an explicit
-%   path (\emph{i.e.}~if it is in the \TeX{} search path), and will
+%   directory is empty if the file was loaded without an explicit
+%   path (\emph{i.e.}~if it is in the \TeX{} search path), and does
 %   \emph{not} end in |/| other than the case that it is exactly equal
 %   to the root directory. The \meta{name} and \meta{ext} parts together
 %   make up the file name, thus the \meta{name} part may be thought of
 %   as the \enquote{job name} for the current file. Note that \TeX{} does
 %   not provide information on the \meta{ext} part for the main (top
-%   level) file and it will always have an empty \meta{dir} component.
+%   level) file and that this file always has an empty \meta{dir} component.
 %   Also, the \meta{name} here will be equal to \cs{c_sys_jobname_str},
 %   which may be different from the real file name (if set using
 %   |--jobname|, for example).
@@ -91,7 +91,7 @@
 %
 % \begin{variable}[added = 2017-06-18]{\l_file_search_path_seq}
 %   Each entry is a (relative) directory which should be searched when
-%   seeking a file. The entries will not be expanded when used so
+%   seeking a file. The entries are not expanded when used so
 %   may contain active characters but should not feature any variable
 %   content.
 % \end{variable}
@@ -113,7 +113,7 @@
 %   Searches for \meta{file name} in the path as detailed for
 %   \cs{file_if_exist:nTF}, and if found sets the \meta{str var} the
 %   fully-qualified name of the file, \emph{i.e.}~the path and file name.
-%   If the file is not found then the \meta{str var} will be empty.
+%   If the file is not found then the \meta{str var} is empty.
 % \end{function}
 %
 % \begin{function}[added = 2017-06-23]{\file_parse_full_name:nNNN}
@@ -121,19 +121,19 @@
 %     \cs{file_parse_full_name:nNNN} \Arg{full name} \meta{dir} \meta{name} \meta{ext}
 %   \end{syntax}
 %   Parses the \meta{full name} and splits it into three parts, each of
-%   which is returned by settings the appropriate local string variable:
+%   which is returned by setting the appropriate local string variable:
 %   \begin{itemize}
 %     \item The \meta{dir}: everything up to the last |/| (path separator)
 %       in the \meta{file path}. As with system \texttt{PATH} variables
-%       and related functions, the \meta{dir} will \emph{not} feature a trailing
+%       and related functions, the \meta{dir} does \emph{not} feature a trailing
 %       |/| unless it points to the root directory. If there is no path (only
-%       a file name), \meta{dir} will be empty.
+%       a file name), \meta{dir} is empty.
 %     \item The \meta{name}: everything after the last |/| up to the last |.|,
 %       where both of those characters are optional. The \meta{name} may
 %       contain multiple |.| characters.
-%      \item The \meta{ext}: everything after the last |.| If there is no
-%        \meta{ext} in the \meta{file path}, the \TeX{} standard value
-%        \texttt{.tex} will be returned.
+%      \item The \meta{ext}: everything after the last |.| (including the dot).
+%        If there is no \meta{ext} in the \meta{file path}, the \TeX{} standard
+%        value \texttt{.tex} is returned.
 %   \end{itemize}
 %   This function does not expand the \meta{full name} before turning it
 %   to a string.  It assume that the \meta{full name} either contains no
@@ -148,15 +148,15 @@
 %   \cs{file_if_exist:nTF}, and if found reads in the file as
 %   additional \LaTeX{} source. All files read are recorded
 %   for information and the file name stack is updated by this
-%   function. An error will be raised if the file is not found.
+%   function. An error is raised if the file is not found.
 % \end{function}
 %
 % \begin{function}{\file_list:}
 %   \begin{syntax}
 %     \cs{file_list:}
 %   \end{syntax}
-%   This function will list all files loaded using \cs{file_input:n}
-%   in the log file.
+%   This function lists in the log file all files loaded using
+%   \cs{file_input:n}.
 % \end{function}
 %
 % \subsection{Input--output stream management}
@@ -219,7 +219,7 @@
 %   open it is closed before the new operation begins. The
 %   \meta{stream} is available for access immediately and will remain
 %   allocated to \meta{file name} until a \cs{iow_close:N} instruction
-%   is given or the \TeX{} run ends. Opening a file for writing will clear
+%   is given or the \TeX{} run ends. Opening a file for writing clears
 %   any existing content in the file (\emph{i.e.}~writing is \emph{not}
 %   additive).
 % \end{function}
@@ -254,15 +254,15 @@
 %   and right braces are found) from the input \meta{stream} and stores
 %   the result locally in the \meta{token list} variable. If the
 %   \meta{stream} is not open, input is requested from the terminal.
-%   The material read from the \meta{stream} will be tokenized by \TeX{}
+%   The material read from the \meta{stream} is tokenized by \TeX{}
 %   according to the category codes and \tn{endlinechar} in force when
 %   the function is used.  Assuming normal settings, any lines which do
-%   not end in a comment character~|%| will have the line ending
+%   not end in a comment character~|%| have the line ending
 %   converted to a space, so for example input
 %   \begin{verbatim}
 %      a b  c
 %   \end{verbatim}
-%   will result in a token list \verb*|a b c |.  Any blank line is
+%   results in a token list \verb*|a b c |.  Any blank line is
 %   converted to the token \cs{par}. Therefore, blank lines can be
 %   skipped by using a test such as
 %   \begin{verbatim}
@@ -295,15 +295,15 @@
 %   The material is read from the \meta{stream} as a series of tokens with
 %   category code $12$ (other), with the exception of space
 %   characters which are given category code $10$ (space).
-%   Multiple whitespace characters are retained by this process.  It will
-%   always only read one line and any blank lines in the input
-%   will result in the \meta{token list variable} being empty. Unlike
+%   Multiple whitespace characters are retained by this process.  It
+%   always only reads one line and any blank lines in the input
+%   result in the \meta{token list variable} being empty. Unlike
 %   \cs{ior_get:NN}, line ends do not receive any special treatment. Thus
 %   input
 %   \begin{verbatim}
 %      a b  c
 %   \end{verbatim}
-%   will result in a token list |a b  c| with the letters |a|, |b|, and |c|
+%   results in a token list |a b  c| with the letters |a|, |b|, and |c|
 %   having category code~12.
 %   \begin{texnote}
 %     This protected macro is a wrapper around the \eTeX{} primitive
@@ -321,8 +321,8 @@
 %   Applies the \meta{inline function} to each set of \meta{lines}
 %   obtained by calling \cs{ior_get:NN} until reaching the end of the
 %   file.  \TeX{} ignores any trailing new-line marker from the file it
-%   reads.  The \meta{inline function} should consist of code which will
-%   receive the \meta{line} as |#1|.
+%   reads.  The \meta{inline function} should consist of code which
+%   receives the \meta{line} as |#1|.
 % \end{function}
 %
 % \begin{function}[added = 2012-02-11]{\ior_str_map_inline:Nn}
@@ -334,7 +334,7 @@
 %   as a series of tokens with category code $12$ (other), with the
 %   exception of space characters which are given category code $10$
 %   (space). The \meta{inline function} should consist of code which
-%   will receive the \meta{line} as |#1|.
+%   receives the \meta{line} as |#1|.
 %   Note that \TeX{} removes trailing space and tab characters
 %   (character codes 32 and 9) from every line upon input.  \TeX{} also
 %   ignores any trailing new-line marker from the file it reads.
@@ -345,8 +345,8 @@
 %     \cs{ior_map_break:}
 %   \end{syntax}
 %   Used to terminate a \cs[no-index]{ior_map_\ldots} function before all
-%   lines from the \meta{stream} have been processed. This will
-%   normally take place within a conditional statement, for example
+%   lines from the \meta{stream} have been processed. This
+%   normally takes place within a conditional statement, for example
 %   \begin{verbatim}
 %     \ior_map_inline:Nn \l_my_ior
 %       {
@@ -357,12 +357,12 @@
 %           }
 %       }
 %   \end{verbatim}
-%   Use outside of a \cs[no-index]{ior_map_\ldots} scenario will lead to low
+%   Use outside of a \cs[no-index]{ior_map_\ldots} scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
 %     When the mapping is broken, additional tokens may be inserted by the
 %     internal macro \cs{__prg_break_point:Nn} before further items are taken
-%     from the input stream. This will depend on the design of the mapping
+%     from the input stream. This depends on the design of the mapping
 %     function.
 %   \end{texnote}
 % \end{function}
@@ -373,8 +373,8 @@
 %   \end{syntax}
 %   Used to terminate a \cs[no-index]{ior_map_\ldots} function before all
 %   lines in the \meta{stream} have been processed, inserting
-%   the \meta{tokens} after the mapping has ended. This will
-%   normally take place within a conditional statement, for example
+%   the \meta{tokens} after the mapping has ended. This
+%   normally takes place within a conditional statement, for example
 %   \begin{verbatim}
 %     \ior_map_inline:Nn \l_my_ior
 %       {
@@ -385,13 +385,13 @@
 %           }
 %       }
 %   \end{verbatim}
-%   Use outside of a \cs[no-index]{ior_map_\ldots} scenario will lead to low
+%   Use outside of a \cs[no-index]{ior_map_\ldots} scenario leads to low
 %   level \TeX{} errors.
 %   \begin{texnote}
 %     When the mapping is broken, additional tokens may be inserted by the
 %     internal macro \cs{__prg_break_point:Nn} before the \meta{tokens} are
 %     inserted into the input stream.
-%     This will depend on the design of the mapping function.
+%     This depends on the design of the mapping function.
 %   \end{texnote}
 % \end{function}
 %
@@ -401,7 +401,7 @@
 %    \cs{ior_if_eof:NTF} \meta{stream} \Arg{true code} \Arg{false code}
 %  \end{syntax}
 %  Tests if the end of a \meta{stream} has been reached during a reading
-%  operation. The test will also return a \texttt{true} value if
+%  operation. The test also returns a \texttt{true} value if
 %  the \meta{stream} is not open.
 %\end{function}
 %
@@ -445,7 +445,7 @@
 %   \begin{texnote}
 %     When using \pkg{expl3} with a format other than \LaTeX{}, new line
 %     characters inserted using \cs{iow_newline:} or using the
-%     line-wrapping code \cs{iow_wrap:nnnN} will not be recognized in
+%     line-wrapping code \cs{iow_wrap:nnnN} are not recognized in
 %     the argument of \cs{iow_shipout:Nn}.  This may lead to the
 %     insertion of additionnal unwanted line-breaks.
 %   \end{texnote}
@@ -465,7 +465,7 @@
 %     This is a wrapper around the \TeX{} primitive \tn{write}.
 %     When using \pkg{expl3} with a format other than \LaTeX{}, new line
 %     characters inserted using \cs{iow_newline:} or using the
-%     line-wrapping code \cs{iow_wrap:nnnN} will not be recognized in
+%     line-wrapping code \cs{iow_wrap:nnnN} are not recognized in
 %     the argument of \cs{iow_shipout:Nn}.  This may lead to the
 %     insertion of additionnal unwanted line-breaks.
 %   \end{texnote}
@@ -494,7 +494,7 @@
 %   expansion (\emph{e.g.}~in the second argument of \cs{iow_now:Nn}).
 %   \begin{texnote}
 %     When using \pkg{expl3} with a format other than \LaTeX{}, the
-%     character inserted by \cs{iow_newline:} will not be recognized by
+%     character inserted by \cs{iow_newline:} is not recognized by
 %     \TeX{}, which may lead to the insertion of additionnal unwanted
 %     line-breaks.  This issue only affects \cs{iow_shipout:Nn},
 %     \cs{iow_shipout_x:Nn} and direct uses of primitive operations.
@@ -507,10 +507,10 @@
 %   \begin{syntax}
 %     \cs{iow_wrap:nnnN} \Arg{text} \Arg{run-on text} \Arg{set up} \meta{function}
 %   \end{syntax}
-%   This function will wrap the \meta{text} to a fixed number of
+%   This function wraps the \meta{text} to a fixed number of
 %   characters per line. At the start of each line which is wrapped,
-%   the \meta{run-on text} will be inserted.  The line character count
-%   targeted will be the value of \cs{l_iow_line_count_int} minus the
+%   the \meta{run-on text} is inserted.  The line character count
+%   targeted is the value of \cs{l_iow_line_count_int} minus the
 %   number of characters in the \meta{run-on text} for all lines except
 %   the first, for which the target number of characters is simply
 %   \cs{l_iow_line_count_int} since there is no run-on text.  The
@@ -534,12 +534,12 @@
 %   \cs{tl_to_str:n}, \cs{tl_to_str:N}, \emph{etc.}
 %
 %   The result of the wrapping operation is passed as a braced argument to the
-%   \meta{function}, which will typically be a wrapper around a write
+%   \meta{function}, which is typically a wrapper around a write
 %   operation. The output of \cs{iow_wrap:nnnN} (\emph{i.e.}~the argument
-%   passed to the \meta{function}) will consist of characters of category
+%   passed to the \meta{function}) consists of characters of category
 %   \enquote{other} (category code~12), with the exception of spaces which
-%   will have category \enquote{space} (category code~10). This means that the
-%   output will \emph{not} expand further when written to a file.
+%   have category \enquote{space} (category code~10). This means that the
+%   output does \emph{not} expand further when written to a file.
 %
 %   \begin{texnote}
 %     Internally, \cs{iow_wrap:nnnN} carries out an \texttt{x}-type expansion
@@ -556,7 +556,7 @@
 %     \cs{iow_indent:n} \Arg{text}
 %   \end{syntax}
 %   In the first argument of \cs{iow_wrap:nnnN} (for instance in messages),
-%   indents \meta{text} by four spaces. This function will not cause
+%   indents \meta{text} by four spaces. This function does not cause
 %   a line break, and only affects lines which start within the scope
 %   of the \meta{text}. In case the indented \meta{text} should appear
 %   on separate lines from the surrounding text, use |\\| to force
@@ -580,7 +580,7 @@
 %
 % \begin{variable}{\c_term_ior}
 %   Constant input stream for reading from the terminal. Reading from this
-%   stream using \cs{ior_get:NN} or similar will result in a prompt from
+%   stream using \cs{ior_get:NN} or similar results in a prompt from
 %   \TeX{} of the form
 %   \begin{verbatim}
 %     <tl>=
@@ -862,7 +862,7 @@
 % \begin{macro}{\file_get_full_name:nN, \file_get_full_name:VN}
 % \begin{macro}[aux]{\@@_get_full_name_search:nN}
 %   The way to test if a file exists is to try to open it: if it does
-%   not exist then \TeX{} will report end-of-file. A search is made
+%   not exist then \TeX{} reports end-of-file. A search is made
 %   looking at each potential path in turn (starting from the current
 %   directory). The first location is of course treated as the correct
 %   one: this is done by jumping to \cs{__prg_break_point:}. If nothing
@@ -901,9 +901,9 @@
 %
 % \begin{macro}[TF]{\file_if_exist:n}
 %   The test for the existence of a file is a wrapper around the function to
-%   add a path to a file. If the file was found, the path will contain
+%   add a path to a file. If the file was found, the path contains
 %   something, whereas if the file was not located then the return value
-%   will be empty.
+%   is empty.
 %    \begin{macrocode}
 \prg_new_protected_conditional:Npnn \file_if_exist:n #1 { T , F , TF }
   {
@@ -997,7 +997,6 @@
     \str_gset:Nn \g_file_curr_ext_str  {#3}
   }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -1849,7 +1848,7 @@
 %   valid and otherwise to \cs{@@_indent_error:n}.  The first places the
 %   instruction for increasing the indentation before its argument, and
 %   the instruction for unindenting afterwards.  The second produces an
-%   error expandably.  Note that there will be no forced line-break, so
+%   error expandably.  Note that there are no forced line-break, so
 %   the indentation only changes when the next line is started.
 %    \begin{macrocode}
 \cs_new_protected:Npn \iow_indent:n #1
@@ -1921,7 +1920,7 @@
       \int_set:Nn \l_@@_line_target_int
         { \l_iow_line_count_int - \str_count:N \l_@@_newline_tl + 1 }
 %    \end{macrocode}
-%   There is then a loop over the input, which will store the wrapped
+%   There is then a loop over the input, which stores the wrapped
 %   result in \cs{l_@@_wrap_tl}.  After the loop, the resulting text is
 %   passed on to the function which has been given as a post-processor.
 %   The \cs{tl_to_str:N} step converts the \enquote{other} spaces back
@@ -1933,7 +1932,7 @@
     #4 { \tl_to_str:N \l_@@_wrap_tl }
   }
 %    \end{macrocode}
-%   As using the generic loader will mean that \cs{protected@edef} is
+%   As using the generic loader means that \cs{protected@edef} is
 %   not available, it's not placed directly in the wrap function but is set
 %   up as an auxiliary. In the generic loader this can then be redefined.
 %    \begin{macrocode}
@@ -1946,9 +1945,9 @@
 %
 % \begin{macro}[aux]{\@@_wrap_do:, \@@_wrap_start:w}
 %   Escape spaces.  Set up a few variables, in particular the initial
-%   value of \cs{l_@@_wrap_tl}: the space will stop the
+%   value of \cs{l_@@_wrap_tl}: the space stops the
 %   \texttt{f}-expansion of the main wrapping function and
-%   \cs{use_none:n} will remove a newline marker inserted by later code.
+%   \cs{use_none:n} removes a newline marker inserted by later code.
 %   The main loop consists of repeatedly calling the \texttt{chunk}
 %   auxiliary to wrap chunks delimited by (newline or indentation)
 %   markers.
@@ -2130,7 +2129,7 @@
 %   \texttt{break_first} auxiliary calls the \texttt{break_none}
 %   auxiliary.  In that case, if the current line is empty, the complete
 %   word (including |##4|, characters beyond what we had grabbed) is
-%   added to the line, making it over-long.  Otherwise, the word will be
+%   added to the line, making it over-long.  Otherwise, the word is
 %   used for the following line (and the last space of the line so far
 %   is removed because it was inserted due to the presence of a marker).
 %    \begin{macrocode}
