--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -63,7 +63,7 @@
 %         { \sort_return_same: }
 %     }
 % \end{verbatim}
-% will result in \cs{l_foo_clist} holding the values
+% results in \cs{l_foo_clist} holding the values
 % |{ -2 , 01 , +1 , 3 , 5 }| sorted in non-decreasing order.
 %
 % The code defining the comparison should call
@@ -73,10 +73,10 @@
 % the order of this pair of items should not be changed.
 %
 % For instance, a \meta{comparison code} consisting only
-% of \cs{sort_return_same:} with no test will yield a trivial
+% of \cs{sort_return_same:} with no test yields a trivial
 % sort: the final order is identical to the original order.
 % Conversely, using a \meta{comparison code} consisting only
-% of \cs{sort_return_swapped:} will reverse the list (in a fairly
+% of \cs{sort_return_swapped:} reverses the list (in a fairly
 % inefficient way).
 %
 % \begin{texnote}
@@ -116,7 +116,7 @@
 %   \cs{l_@@_min_int} to $\cs{l_@@_top_int}-1$.  While reading the
 %   sequence in memory, we check that \cs{l_@@_top_int} remains at most
 %   \cs{l_@@_max_int}, precomputed by \cs{@@_compute_range:}.  That
-%   bound is such that the merge sort will only use \tn{toks} registers
+%   bound is such that the merge sort only uses \tn{toks} registers
 %   less than \cs{l_@@_true_max_int}, namely those that have not been
 %   allocated for use in other code: the user's comparison code could
 %   alter these.
@@ -489,7 +489,7 @@
 %   pair of blocks). If shifting by one block to the right we reach
 %   the end of the list, then this pass has ended: the end of the
 %   list is sorted already. Otherwise, store the result of that shift in $A$,
-%   which will index the first block starting from the top end.
+%   which indexes the first block starting from the top end.
 %   Then locate the end-point (maximum) of the second block: shift
 %   \texttt{end} upwards by one more block, but keeping it
 %   $\leq\texttt{top}$. Copy this upper block of \tn{toks}
@@ -710,7 +710,7 @@
 %
 % In the simple version of the code, \cs{@@:nnNnn} is called
 % \(O(n\ln n)\) times on average (the number of comparisons required by
-% the quicksort algorithm).  Hence most of our focus will be on
+% the quicksort algorithm).  Hence most of our focus is on
 % optimizing that function.
 %
 % The first speed up is to avoid testing for the end of the list at
@@ -830,7 +830,7 @@
 %   when~|#4| contains \cs{__prg_break_point:}, then the
 %   \texttt{prepare_end} auxiliary finds the prepared token list
 %   as~|#4|.  The scene is then set up for \cs{@@_quick_split:NnNn},
-%   which will sort the prepared list and perform the post action placed
+%   which sorts the prepared list and perform the post action placed
 %   after \cs{q_mark}, namely removing the trailing \cs{s__stop} and
 %   \cs{q_stop} and leaving \cs{exp_stop_f:} to stop
 %   \texttt{f}-expansion.
