--- a/l3kernel/source3.tex
+++ b/l3kernel/source3.tex
@@ -37,8 +37,8 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-% This document will typeset the LaTeX3 sources as a single document.
-% This will produce quite a large file (more than 780 pages).
+% This document typesets the LaTeX3 sources as a single document.
+% This produces quite a large file (more than 780 pages).
 %
 % There is also a shorter version (interface3.tex) that only typesets the
 % command % interface descriptions.
